--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{doi:10.1126/scirobotics.adg7165,
   bibtex_show={true},
-  author = {Bing, Zhenshan and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
+  author = {<b>Bing</b>, <b>Zhenshan</b> and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Lateral flexion of a compliant spine improves motor performance in a bioinspired mouse robot},
   journal = {Science Robotics},
   year = {2023},
@@ -25,7 +25,7 @@
   abbr={ICRA},
   bibtex_show={true},
   editor = {},
-  author = {Bing, Zhenshan and Koch, Alexander and Yao, Xiangtong and Huang, Kai and Knoll, Alois},
+  author = {<b>Bing</b>, <b>Zhenshan</b> and Koch, Alexander and Yao, Xiangtong and Huang, Kai and Knoll, Alois},
   title = {Meta-Reinforcement Learning via Language Instructions.},
   booktitle = {2023 IEEE International Conference on Robotics and Automation(ICRA)},
   year = {2023},
@@ -49,7 +49,7 @@
   abbr={IROS},
   bibtex_show={true},
   editor = {},
-  author = {Chen, Kejia and  Bing, Zhenshan and  Wu, Fan and  Meng, Yuan and  Kraft, Andre and  Haddadin, Sami and  Knoll, Alois},
+  author = {Chen, Kejia and  <b>Bing</b>, <b>Zhenshan</b> and  Wu, Fan and  Meng, Yuan and  Kraft, Andre and  Haddadin, Sami and  Knoll, Alois},
   title = {Contact-aware Shaping and Maintenance of Deformable Linear Objects With Fixtures},
   booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2023)},
   year = {2023},
@@ -71,7 +71,7 @@
 @article{tigr,
   abbr={TNNLS},
   bibtex_show={true},
-  author = {Bing, Zhenshan and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
+  author = {<b>Bing</b>, <b>Zhenshan</b> and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Meta-Reinforcement Learning in Nonstationary and Nonparametric Environments},
   journal = {IEEE Transactions on Neural Networks and Learning Systems},
   year = {2023},
@@ -90,7 +90,7 @@
 @article{jai,
   abbr={JAI},
   bibtex_show={true},
-  author = {Bing, Zhenshan and Nitschke, Dominik and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
+  author = {<b>Bing</b>, <b>Zhenshan</b> and Nitschke, Dominik and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
   title = {Towards cognitive navigation: A biologically inspired calibration mechanism for the head direction cell network},
   journal = {Journal of Automation and Intelligence},
   year = {2023},
@@ -113,7 +113,7 @@
 @ARTICLE{9895427,
   abbr={RAM},
   bibtex_show={true},
-  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Knoll, Alois},
+  author={<b>Bing</b>, <b>Zhenshan</b> and Cheng, Long and Huang, Kai and Knoll, Alois},
   journal={IEEE Robotics & Automation Magazine}, 
   title={Simulation to Real: Learning Energy-Efficient Slithering Gaits for a Snake-Like Robot}, 
   year={2022},
@@ -132,7 +132,7 @@
   abbr={TPAMI},
   bibtex_show={true},
   title={Meta-reinforcement learning in non-stationary and dynamic environments},
-  author={Bing, Zhenshan and Lerch, David and Huang, Kai and Knoll, Alois},
+  author={<b>Bing</b>, <b>Zhenshan</b> and Lerch, David and Huang, Kai and Knoll, Alois},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   year={2022},
   publisher={IEEE},
@@ -144,30 +144,30 @@
   selected={true}
 }
 
-@ARTICLE{9772990,  author={Bing, Zhenshan and Zhou, Hongkuan and Li, Rui and Su, Xiaojie and Morin, Fabrice Oliver and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Industrial Electronics},   title={Solving Robotic Manipulation with Sparse Reward Reinforcement Learning via Graph-Based Diversity and Proximity},   year={2022},  volume={},  number={},  pages={1-1},  doi={10.1109/TIE.2022.3172754},
+@ARTICLE{9772990,  author={<b>Bing</b>, <b>Zhenshan</b> and Zhou, Hongkuan and Li, Rui and Su, Xiaojie and Morin, Fabrice Oliver and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Industrial Electronics},   title={Solving Robotic Manipulation with Sparse Reward Reinforcement Learning via Graph-Based Diversity and Proximity},   year={2022},  volume={},  number={},  pages={1-1},  doi={10.1109/TIE.2022.3172754},
 preview={gc-hgg.png},
 selected={true}
 }
 
 @ARTICLE{9810498,  
   abbr={TFS},
-  author={Tan, Yaoyao and Su, Xiaojie and Bing, Zhenshan and Yang, Xiaokui and Knoll, Alois},  journal={IEEE Transactions on Fuzzy Systems},   title={Reduced-Model Based Fault Detector and Controller Design for Discrete-Time Switching Fuzzy Systems},   year={2022},  volume={},  number={},  pages={1-13},  doi={10.1109/TFUZZ.2022.3187195}}
+  author={Tan, Yaoyao and Su, Xiaojie and <b>Bing</b>, <b>Zhenshan</b> and Yang, Xiaokui and Knoll, Alois},  journal={IEEE Transactions on Fuzzy Systems},   title={Reduced-Model Based Fault Detector and Controller Design for Discrete-Time Switching Fuzzy Systems},   year={2022},  volume={},  number={},  pages={1-13},  doi={10.1109/TFUZZ.2022.3187195}}
 
-@ARTICLE{9634854,  abbr={TNNLS}, author={Bing, Zhenshan and Sewisy, Amir EI and Zhuang, Genghang and Walter, Florian and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Toward Cognitive Navigation: Design and Implementation of a Biologically Inspired Head Direction Cell Network},   year={2022},  volume={33},  number={5},  pages={2147-2158},  doi={10.1109/TNNLS.2021.3128380}, preview={hdc.png},
+@ARTICLE{9634854,  abbr={TNNLS}, author={<b>Bing</b>, <b>Zhenshan</b> and Sewisy, Amir EI and Zhuang, Genghang and Walter, Florian and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Toward Cognitive Navigation: Design and Implementation of a Biologically Inspired Head Direction Cell Network},   year={2022},  volume={33},  number={5},  pages={2147-2158},  doi={10.1109/TNNLS.2021.3128380}, preview={hdc.png},
 selected={true}}
 
 @INPROCEEDINGS{9827283,  
-  abbr={IEEE IV}, author={Zhuang, Genghang and Cagnetta, Carlo and Bing, Zhenshan and Cao, Hu and Li, Xinyi and Huang, Kai and Knoll, Alois},  booktitle={2022 IEEE Intelligent Vehicles Symposium (IV)},   title={A Biologically-Inspired Global Localization System for Mobile Robots Using LiDAR Sensor},   year={2022},  volume={},  number={},  pages={984-990},  doi={10.1109/IV51971.2022.9827283}}
+  abbr={IEEE IV}, author={Zhuang, Genghang and Cagnetta, Carlo and <b>Bing</b>, <b>Zhenshan</b> and Cao, Hu and Li, Xinyi and Huang, Kai and Knoll, Alois},  booktitle={2022 IEEE Intelligent Vehicles Symposium (IV)},   title={A Biologically-Inspired Global Localization System for Mobile Robots Using LiDAR Sensor},   year={2022},  volume={},  number={},  pages={984-990},  doi={10.1109/IV51971.2022.9827283}}
 
-@ARTICLE{9611526,  author={Bing, Zhenshan and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png},
+@ARTICLE{9611526,  author={<b>Bing</b>, <b>Zhenshan</b> and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png},
 selected={true}}
 
-@ARTICLE{9466373,  author={Bing, Zhenshan and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png},
+@ARTICLE{9466373,  author={<b>Bing</b>, <b>Zhenshan</b> and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png},
 selected={true}}
 
 @ARTICLE{10.3389/fnbot.2021.688344,
   
-AUTHOR={López-Randulfe, Javier and Duswald, Tobias and Bing, Zhenshan and Knoll, Alois},   
+AUTHOR={López-Randulfe, Javier and Duswald, Tobias and <b>Bing</b>, <b>Zhenshan</b> and Knoll, Alois},   
    
 TITLE={Spiking Neural Network for Fourier Transform and Object Detection for Automotive Radar},      
   
@@ -191,7 +191,7 @@ preview={snn-ft.png}
 @article{zhuang2021biologically,
   abbr={arXiv},
   title={A Biologically Inspired Simultaneous Localization and Mapping System Based on LiDAR Sensor},
-  author={Zhuang, Genghang and Bing, Zhenshan and Zhao, Jiaxi and Li, Ning and Huang, Yuhong and Huang, Kai and Knoll, Alois},
+  author={Zhuang, Genghang and <b>Bing</b>, <b>Zhenshan</b> and Zhao, Jiaxi and Li, Ning and Huang, Yuhong and Huang, Kai and Knoll, Alois},
   journal={arXiv preprint arXiv:2109.12910},
   year={2021}
 }
@@ -199,7 +199,7 @@ preview={snn-ft.png}
 @article{bing2021meta,
   abbr={arXiv},
   title={Meta-Reinforcement Learning in Broad and Non-Parametric Environments},
-  author={Bing, Zhenshan and Knak, Lukas and Robin, Fabrice Oliver and Huang, Kai and Knoll, Alois},
+  author={<b>Bing</b>, <b>Zhenshan</b> and Knak, Lukas and Robin, Fabrice Oliver and Huang, Kai and Knoll, Alois},
   journal={arXiv preprint arXiv:2108.03718},
   year={2021}
 }
@@ -249,19 +249,19 @@ eprint = {
   preview={snake-cpg-bb.png}
 }
 
-@INPROCEEDINGS{7989476,  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Zhou, Mingchuan and Knoll, Alois},  booktitle={2017 IEEE International Conference on Robotics and Automation (ICRA)},   title={CPG-based control of smooth transition for body shape and locomotion speed of a snake-like robot},   year={2017},  volume={},  number={},  pages={4146-4153},  doi={10.1109/ICRA.2017.7989476},
+@INPROCEEDINGS{7989476,  author={<b>Bing</b>, <b>Zhenshan</b> and Cheng, Long and Huang, Kai and Zhou, Mingchuan and Knoll, Alois},  booktitle={2017 IEEE International Conference on Robotics and Automation (ICRA)},   title={CPG-based control of smooth transition for body shape and locomotion speed of a snake-like robot},   year={2017},  volume={},  number={},  pages={4146-4153},  doi={10.1109/ICRA.2017.7989476},
 preview={snake-cpg-icra.png}}
 
-@ARTICLE{7945270,  author={Chen, Guang and Bing, Zhenshan and Röhrbein, Florian and Conradt, Jörg and Huang, Kai and Cheng, Long and Jiang, Zhuangyi and Knoll, Alois},  journal={IEEE Transactions on Cognitive and Developmental Systems},   title={Toward Brain-Inspired Learning With the Neuromorphic Snake-Like Robot and the Neurorobotic Platform},   year={2019},  volume={11},  number={1},  pages={1-12},  doi={10.1109/TCDS.2017.2712712}, preview={neuro-snake.png}}
+@ARTICLE{7945270,  author={Chen, Guang and <b>Bing</b>, <b>Zhenshan</b> and Röhrbein, Florian and Conradt, Jörg and Huang, Kai and Cheng, Long and Jiang, Zhuangyi and Knoll, Alois},  journal={IEEE Transactions on Cognitive and Developmental Systems},   title={Toward Brain-Inspired Learning With the Neuromorphic Snake-Like Robot and the Neurorobotic Platform},   year={2019},  volume={11},  number={1},  pages={1-12},  doi={10.1109/TCDS.2017.2712712}, preview={neuro-snake.png}}
 
-@INPROCEEDINGS{8009760,  author={Bing, Zhenshan and Cheng, Long and Knoll, Alois and Zhong, Anyang and Huang, Kai and Zhang, Feihu},  booktitle={2017 20th International Conference on Information Fusion (Fusion)},   title={Slope angle estimation based on multi-sensor fusion for a snake-like robot},   year={2017},  volume={},  number={},  pages={1-6},  doi={10.23919/ICIF.2017.8009760}, preview={fusion-snake.png}}
+@INPROCEEDINGS{8009760,  author={<b>Bing</b>, <b>Zhenshan</b> and Cheng, Long and Knoll, Alois and Zhong, Anyang and Huang, Kai and Zhang, Feihu},  booktitle={2017 20th International Conference on Information Fusion (Fusion)},   title={Slope angle estimation based on multi-sensor fusion for a snake-like robot},   year={2017},  volume={},  number={},  pages={1-6},  doi={10.23919/ICIF.2017.8009760}, preview={fusion-snake.png}}
 
-@INPROCEEDINGS{8206095,  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Jiang, Zhuangyi and Chen, Guang and Röhrbein, Florian and Knoll, Alois},  booktitle={2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Towards autonomous locomotion: Slithering gait design of a snake-like robot for target observation and tracking},   year={2017},  volume={},  number={},  pages={2698-2703},  doi={10.1109/IROS.2017.8206095}, preview={snake-iros.png}}
+@INPROCEEDINGS{8206095,  author={<b>Bing</b>, <b>Zhenshan</b> and Cheng, Long and Huang, Kai and Jiang, Zhuangyi and Chen, Guang and Röhrbein, Florian and Knoll, Alois},  booktitle={2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Towards autonomous locomotion: Slithering gait design of a snake-like robot for target observation and tracking},   year={2017},  volume={},  number={},  pages={2698-2703},  doi={10.1109/IROS.2017.8206095}, preview={snake-iros.png}}
 
 @inproceedings{hinz2017online,
   abbr={Springer},
   title={Online multi-object tracking-by-clustering for intelligent transportation system with neuromorphic vision sensor},
-  author={Hinz, Gereon and Chen, Guang and Aafaque, Muhammad and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and Bing, Zhenshan and Qu, Zhongnan and Stechele, Walter and Knoll, Alois},
+  author={Hinz, Gereon and Chen, Guang and Aafaque, Muhammad and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and <b>Bing</b>, <b>Zhenshan</b> and Qu, Zhongnan and Stechele, Walter and Knoll, Alois},
   booktitle={Joint German/Austrian Conference on Artificial Intelligence (K{\"u}nstliche Intelligenz)},
   pages={142--154},
   year={2017},
@@ -271,7 +271,7 @@ preview={snake-cpg-icra.png}}
 @inproceedings{jiang2017event,
   abbr={ICNIP},
   title={Event-based target tracking control for a snake robot using a dynamic vision sensor},
-  author={Jiang, Zhuangyi and Bing, Zhenshan and Huang, Kai and Chen, Guang and Cheng, Long and Knoll, Alois},
+  author={Jiang, Zhuangyi and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Chen, Guang and Cheng, Long and Knoll, Alois},
   booktitle={International Conference on Neural Information Processing},
   pages={111--121},
   year={2017},
@@ -279,9 +279,9 @@ preview={snake-cpg-icra.png}}
 }
 
 @INPROCEEDINGS{8324586,  
-abbr={ROBIO}, author={Xiao, Shanshan and Bing, Zhenshan and Huang, Kai and Huang, Yuhong},  booktitle={2017 IEEE International Conference on Robotics and Biomimetics (ROBIO)},   title={Snake-like robot climbs inside different pipes},   year={2017},  volume={},  number={},  pages={1232-1239},  doi={10.1109/ROBIO.2017.8324586}}
+abbr={ROBIO}, author={Xiao, Shanshan and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Huang, Yuhong},  booktitle={2017 IEEE International Conference on Robotics and Biomimetics (ROBIO)},   title={Snake-like robot climbs inside different pipes},   year={2017},  volume={},  number={},  pages={1232-1239},  doi={10.1109/ROBIO.2017.8324586}}
 
-@INPROCEEDINGS{8460482,  author={Bing, Zhenshan and Meschede, Claus and Huang, Kai and Chen, Guang and Rohrbein, Florian and Akl, Mahmoud and Knoll, Alois},  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of Spiking Neural Network Based on R-STDP for a Lane Keeping Vehicle},   year={2018},  volume={},  number={},  pages={4725-4732},  doi={10.1109/ICRA.2018.8460482}, preview={icra-18.png},
+@INPROCEEDINGS{8460482,  author={<b>Bing</b>, <b>Zhenshan</b> and Meschede, Claus and Huang, Kai and Chen, Guang and Rohrbein, Florian and Akl, Mahmoud and Knoll, Alois},  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of Spiking Neural Network Based on R-STDP for a Lane Keeping Vehicle},   year={2018},  volume={},  number={},  pages={4725-4732},  doi={10.1109/ICRA.2018.8460482}, preview={icra-18.png},
 code={https://github.com/zhenshan-bing/Indirect-and-Direct-Training-of-Spiking-Neural-Networks-for-End-to-End-Control-of-a-Lane-Keeping-Veh},
 selected={false}}
 
@@ -290,7 +290,7 @@ selected={false}}
 abbr={survey},
 
   
-AUTHOR={Bing, Zhenshan and Meschede, Claus and Röhrbein, Florian and Huang, Kai and Knoll, Alois C.},   
+AUTHOR={<b>Bing</b>, <b>Zhenshan</b> and Meschede, Claus and Röhrbein, Florian and Huang, Kai and Knoll, Alois C.},   
    
 TITLE={A Survey of Robotics Control Based on Learning-Inspired Spiking Neural Networks},      
   
@@ -309,23 +309,23 @@ ISSN={1662-5218},
 ABSTRACT={Biological intelligence processes information using impulses or spikes, which makes those living creatures able to perceive and act in the real world exceptionally well and outperform state-of-the-art robots in almost every aspect of life. To make up the deficit, emerging hardware technologies and software knowledge in the fields of neuroscience, electronics, and computer science have made it possible to design biologically realistic robots controlled by spiking neural networks (SNNs), inspired by the mechanism of brains. However, a comprehensive review on controlling robots based on SNNs is still missing. In this paper, we survey the developments of the past decade in the field of spiking neural networks for control tasks, with particular focus on the fast emerging robotics-related applications. We first highlight the primary impetuses of SNN-based robotics tasks in terms of speed, energy efficiency, and computation capabilities. We then classify those SNN-based robotic applications according to different learning rules and explicate those learning rules with their corresponding robotic applications. We also briefly present some existing platforms that offer an interaction between SNNs and robotics simulations for exploration and exploitation. Finally, we conclude our survey with a forecast of future challenges and some associated potential research topics in terms of controlling robots based on SNNs.}
 }
 
-@INPROCEEDINGS{8633487,  abbr={IEEE-HFR}, author={Chen, Long and Yuwen, Xuan and Bing, Zhenshan and Huang, Kai and Wang, Jun},  booktitle={2018 11th International Workshop on Human Friendly Robotics (HFR)},   title={Teleoperation Snake Robots with Panorama Vision},   year={2018},  volume={},  number={},  pages={54-59},  doi={10.1109/HFR.2018.8633487}}
+@INPROCEEDINGS{8633487,  abbr={IEEE-HFR}, author={Chen, Long and Yuwen, Xuan and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Wang, Jun},  booktitle={2018 11th International Workshop on Human Friendly Robotics (HFR)},   title={Teleoperation Snake Robots with Panorama Vision},   year={2018},  volume={},  number={},  pages={54-59},  doi={10.1109/HFR.2018.8633487}}
 
 @article{chen2018neuromorphic,
   abbr={DVS},
   title={Neuromorphic vision based multivehicle detection and tracking for intelligent transportation system},
-  author={Chen, Guang and Cao, Hu and Aafaque, Muhammad and Chen, Jieneng and Ye, Canbo and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and Chen, Kai and Bing, Zhenshan and Liu, Xingbo and others},
+  author={Chen, Guang and Cao, Hu and Aafaque, Muhammad and Chen, Jieneng and Ye, Canbo and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and Chen, Kai and <b>Bing</b>, <b>Zhenshan</b> and Liu, Xingbo and others},
   journal={Journal of advanced transportation},
   volume={2018},
   year={2018},
   publisher={Hindawi}
 }
 
-@INPROCEEDINGS{8793774,  author={Bing, Zhenshan and Jiang, Zhuangyi and Cheng, Long and Cai, Caixia and Huang, Kai and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of a Multi-Layered Snn Based on R-Stdp for a Target Tracking Snake-Like Robot},   year={2019},  volume={},  number={},  pages={9645-9651},  doi={10.1109/ICRA.2019.8793774}, preview={icra-19.png}}
+@INPROCEEDINGS{8793774,  author={<b>Bing</b>, <b>Zhenshan</b> and Jiang, Zhuangyi and Cheng, Long and Cai, Caixia and Huang, Kai and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of a Multi-Layered Snn Based on R-Stdp for a Target Tracking Snake-Like Robot},   year={2019},  volume={},  number={},  pages={9645-9651},  doi={10.1109/ICRA.2019.8793774}, preview={icra-19.png}}
 
 @ARTICLE{10.3389/fnbot.2019.00018,
   
-AUTHOR={Bing, Zhenshan and Baumann, Ivan and Jiang, Zhuangyi and Huang, Kai and Cai, Caixia and Knoll, Alois},   
+AUTHOR={<b>Bing</b>, <b>Zhenshan</b> and Baumann, Ivan and Jiang, Zhuangyi and Huang, Kai and Cai, Caixia and Knoll, Alois},   
    
 TITLE={Supervised Learning in SNN via Reward-Modulated Spike-Timing-Dependent Plasticity for a Target Reaching Vehicle},      
   
@@ -345,11 +345,11 @@ ABSTRACT={Spiking neural networks (SNNs) offer many advantages over traditional 
 preview={snn-navigation-18.png}
 }
 
-@INPROCEEDINGS{8793924,  author={Jiang, Zhuangyi and Xia, Pengfei and Huang, Kai and Stechele, Walter and Chen, Guang and Bing, Zhenshan and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={Mixed Frame Event-Driven Fast Pedestrian Detection},   year={2019},  volume={},  number={},  pages={8332-8338},  doi={10.1109/ICRA.2019.8793924}, preview={icra-19-2.png}}
+@INPROCEEDINGS{8793924,  author={Jiang, Zhuangyi and Xia, Pengfei and Huang, Kai and Stechele, Walter and Chen, Guang and <b>Bing</b>, <b>Zhenshan</b> and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={Mixed Frame Event-Driven Fast Pedestrian Detection},   year={2019},  volume={},  number={},  pages={8332-8338},  doi={10.1109/ICRA.2019.8793924}, preview={icra-19-2.png}}
 
 @ARTICLE{10.3389/fnbot.2019.00029,
   
-AUTHOR={Jiang, Zhuangyi and Bing, Zhenshan and Huang, Kai and Knoll, Alois},   
+AUTHOR={Jiang, Zhuangyi and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Knoll, Alois},   
    
 TITLE={Retina-Based Pipe-Like Object Tracking Implemented Through Spiking Neural Network on a Snake Robot},      
   
@@ -372,14 +372,14 @@ preview={2022-08-13_22-20.png}
 @phdthesis{bing2019biological,
   abbr={Thesis},
   title={Biological-inspired Hierarchical Control of a Snake-like Robot for Autonomous Locomotion},
-  author={Bing, Zhenshan},
+  author={<b>Bing</b>, <b>Zhenshan</b>},
   year={2019},
   school={Technische Universit{\"a}t M{\"u}nchen}
 }
 
 @article{zhou2019peak,
   title={Peak Temperature Minimization for Hard Real-Time Systems Using DVS and DPM},
-  author={Zhou, Mingchuan and Cheng, Long and Dell’Antonio, Manuel and Wang, Xiebing and Bing, Zhenshan and Nasseri, M Ali and Huang, Kai and Knoll, Alois},
+  author={Zhou, Mingchuan and Cheng, Long and Dell’Antonio, Manuel and Wang, Xiebing and <b>Bing</b>, <b>Zhenshan</b> and Nasseri, M Ali and Huang, Kai and Knoll, Alois},
   journal={Journal of Circuits, Systems and Computers},
   volume={28},
   number={06},
@@ -392,7 +392,7 @@ preview={2022-08-13_22-20.png}
 
 abbr={DVS},
   
-AUTHOR={Miao, Shu and Chen, Guang and Ning, Xiangyu and Zi, Yang and Ren, Kejia and Bing, Zhenshan and Knoll, Alois},   
+AUTHOR={Miao, Shu and Chen, Guang and Ning, Xiangyu and Zi, Yang and Ren, Kejia and <b>Bing</b>, <b>Zhenshan</b> and Knoll, Alois},   
    
 TITLE={Neuromorphic Vision Datasets for Pedestrian Detection, Action Recognition, and Fall Detection},      
   
@@ -413,7 +413,7 @@ ISSN={1662-5218}
 @inproceedings{ijcai2019-0785,
   abbr={IJCAI},
   title     = {Energy-Efficient Slithering Gait Exploration for a Snake-Like Robot Based on Reinforcement Learning},
-  author    = {Bing, Zhenshan and Lemke, Christian and Jiang, Zhuangyi and Huang, Kai and Knoll, Alois},
+  author    = {<b>Bing</b>, <b>Zhenshan</b> and Lemke, Christian and Jiang, Zhuangyi and Huang, Kai and Knoll, Alois},
   booktitle = {Proceedings of the Twenty-Eighth International Joint Conference on
                Artificial Intelligence, {IJCAI-19}},
   publisher = {International Joint Conferences on Artificial Intelligence Organization},             
@@ -427,7 +427,7 @@ ISSN={1662-5218}
 @article{bing2020energy,
   abbr={Neural Networks},
   title={Energy-efficient and damage-recovery slithering gait design for a snake-like robot based on reinforcement learning and inverse reinforcement learning},
-  author={Bing, Zhenshan and Lemke, Christian and Cheng, Long and Huang, Kai and Knoll, Alois},
+  author={<b>Bing</b>, <b>Zhenshan</b> and Lemke, Christian and Cheng, Long and Huang, Kai and Knoll, Alois},
   journal={Neural Networks},
   volume={129},
   pages={323--333},
@@ -452,14 +452,14 @@ code={https://github.com/zhenshan-bing/Indirect-and-Direct-Training-of-Spiking-N
 selected={true}
 }
 
-@INPROCEEDINGS{9341520,  abbr={IROS}, author={Jiang, Zhuangyi and Otto, Richard and Bing, Zhenshan and Huang, Kai and Knoll, Alois},  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Target Tracking Control of a Wheel-less Snake Robot Based on a Supervised Multi-layered SNN},   year={2020},  volume={},  number={},  pages={7124-7130},  doi={10.1109/IROS45743.2020.9341520}}
+@INPROCEEDINGS{9341520,  abbr={IROS}, author={Jiang, Zhuangyi and Otto, Richard and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Knoll, Alois},  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Target Tracking Control of a Wheel-less Snake Robot Based on a Supervised Multi-layered SNN},   year={2020},  volume={},  number={},  pages={7124-7130},  doi={10.1109/IROS45743.2020.9341520}}
 
 @ARTICLE{10.3389/fnbot.2020.591128,
 
 abbr={Frontiers},
 
   
-AUTHOR={Bing, Zhenshan and Lemke, Christian and Morin, Fabric O. and Jiang, Zhuangyi and Cheng, Long and Huang, Kai and Knoll, Alois},   
+AUTHOR={<b>Bing</b>, <b>Zhenshan</b> and Lemke, Christian and Morin, Fabric O. and Jiang, Zhuangyi and Cheng, Long and Huang, Kai and Knoll, Alois},   
    
 TITLE={Perception-Action Coupling Target Tracking Control for a Snake Robot via Reinforcement Learning},      
   
