--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -482,7 +482,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   abbr={TPAMI},
   bibtex_show={true},
   author={<b>Bing</b>, <b>Zhenshan</b> and Yun, Yuqi and Huang, Kai and Knoll, Alois},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)}, 
   title={Context-Based Meta-Reinforcement Learning With Bayesian Nonparametric Models}, 
   year={2024},
   volume={46},
