--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   bibtex_show={true},
   author = {<b>Bing</b>, <b>Zhenshan</b> and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Lateral flexion of a compliant spine improves motor performance in a bioinspired mouse robot},
-  journal = {Science Robotics},
+  journal = {<b>Science Robotics</b>},
   year = {2023},
   volume = {8},
   month = {},
