--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{doi:10.1126/scirobotics.adg7165,
   bibtex_show={true},
-  author = {<b>Bing</b>, <b>Zhenshan</b> and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
+  author = {<b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Lateral flexion of a compliant spine improves motor performance in a bioinspired mouse robot},
   journal = {<b>Science Robotics</b>},
   year = {2023},
