--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
   abbr={TPAMI},
   bibtex_show={true},
   author={<b>Bing</b>, <b>Zhenshan</b> and Yun, Yuqi and Huang, Kai and Knoll, Alois},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)}, 
+  journal={<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</b>}, 
   title={Context-Based Meta-Reinforcement Learning With Bayesian Nonparametric Models}, 
   year={2024},
   volume={46},
@@ -149,7 +149,7 @@
   bibtex_show={true},
   title={Meta-reinforcement learning in non-stationary and dynamic environments},
   author={<b>Bing</b>, <b>Zhenshan</b> and Lerch, David and Huang, Kai and Knoll, Alois},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  journal={<b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>},
   year={2022},
   publisher={IEEE},
   video={},
