--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -496,7 +496,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 
 @article{tu2024humidity,
   title={Humidity Stable Thermoelectric Hybrid Materials Toward a Self-Powered Triple Sensing System},
-  author={Tu, Suo and Tian, Ting and Xiao, Tianxiao and Yao, Xiangtong and Shen, Sicong and Wu, Yansong and Liu, Yinlong and <b>Bing, Zhenshan</b> and Huang, Kai and Knoll, Alois and others},
+  author={Tu, Suo and Tian, Ting and Xiao, Tianxiao and Yao, Xiangtong and Shen, Sicong and Wu, Yansong and Liu, Yinlong and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Knoll, Alois and others},
   journal={<b>Advanced Functional Materials</b>},
   pages={2316088},
   year={2024},
