--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -495,10 +495,50 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 }
 
 @article{tu2024humidity,
+  abbr={AFM},
   title={Humidity Stable Thermoelectric Hybrid Materials Toward a Self-Powered Triple Sensing System},
   author={Tu, Suo and Tian, Ting and Xiao, Tianxiao and Yao, Xiangtong and Shen, Sicong and Wu, Yansong and Liu, Yinlong and <b>Bing</b>, <b>Zhenshan</b> and Huang, Kai and Knoll, Alois and others},
   journal={<b>Advanced Functional Materials</b>},
   pages={2316088},
   year={2024},
   publisher={Wiley Online Library}
+}
+
+@article{li2024unstrprompt,
+  abbr={IEEE},
+  title={UnstrPrompt: Large language model prompt for driving in unstructured scenarios},
+  author={Li, Yuchen and Li, Luxi and Wu, Zizhang and Bing, Zhenshan and Xuanyuan, Zhe and Knoll, Alois Christian and Chen, Long},
+  journal={IEEE Journal of Radio Frequency Identification},
+  year={2024},
+  publisher={IEEE}
+}
+
+@article{su2024efficient,
+  abbr={TII},
+  title={Efficient Stereo Matching Using Swin Transformer and Multilevel Feature Consistency in Autonomous Mobile Systems},
+  author={Su, Xiaojie and Liu, Shimin and Li, Rui and Bing, Zhenshan and Knoll, Alois},
+  journal={IEEE Transactions on Industrial Informatics},
+  year={2024},
+  publisher={IEEE}
+}
+
+@article{li2024miningllm,
+  abbr={TIV},
+  title={Miningllm: Towards mining 5.0 via large language models in autonomous driving and smart mining},
+  author={Li, Yuchen and Li, Luxi and Wu, Zizhang and Bing, Zhenshan and Ai, Yunfeng and Tian, Bin and Xuanyuan, Zhe and Knoll, Alois Christian and Chen, Long},
+  journal={IEEE Transactions on Intelligent Vehicles},
+  year={2024},
+  publisher={IEEE}
+}
+
+@article{xiao2024multi,
+  abbr={Nano Energy},
+  title={A multi-dimensional tactile perception system based on triboelectric sensors: towards intelligent sorting without seeing},
+  author={Xiao, Tianxiao and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wu, Yansong and Chen, Wei and Zhou, Ziming and Fang, Fan and Liang, Suzhe and Guo, Renjun and Tu, Suo and Pan, Guangjiu and others},
+  journal={<b>Nano Energy</b>},
+  volume={123},
+  pages={109398},
+  year={2024},
+  publisher={Elsevier},
+  selected={true}
 }
