--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -534,7 +534,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 @article{xiao2024multi,
   abbr={Nano Energy},
   title={A multi-dimensional tactile perception system based on triboelectric sensors: towards intelligent sorting without seeing},
-  author={Xiao, Tianxiao and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wu, Yansong and Chen, Wei and Zhou, Ziming and Fang, Fan and Liang, Suzhe and Guo, Renjun and Tu, Suo and Pan, Guangjiu and others},
+  author={Xiao, Tianxiao and <b>Bing</b><sup>#</sup>, <b>Zhenshan</b> and Wu, Yansong and Chen, Wei and Zhou, Ziming and Fang, Fan and Liang, Suzhe and Guo, Renjun and Tu, Suo and Pan, Guangjiu and others},
   journal={<b>Nano Energy</b>},
   volume={123},
   pages={109398},
