--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -542,3 +542,45 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   publisher={Elsevier},
   selected={true}
 }
+
+
+@inproceedings{sayar2024contact,
+  abbr={ICRA},
+  title={Contact Energy Based Hindsight Experience Prioritization},
+  author={Sayar, Erdi and Bing, Zhenshan and D’Eramo, Carlo and Oguz, Ozgur S and Knoll, Alois},
+  booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={5434--5440},
+  year={2024},
+  organization={IEEE}
+}
+
+@inproceedings{wu20241,
+  abbr={ICRA},
+  title={1 khz behavior tree for self-adaptable tactile insertion},
+  author={Wu, Yansong and Wu, Fan and Chen, Lingyun and Chen, Kejia and Schneider, Samuel and Johannsmeier, Lars and Bing, Zhenshan and Abu-Dakka, Fares J and Knoll, Alois and Haddadin, Sami},
+  booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={16002--16008},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{tan2024event,
+  abbr={TSMC},
+  title={Event-Triggered Fuzzy Yaw Control of Six-Wheel Skid-Steer Vehicles},
+  author={Tan, Yaoyao and Su, Xiaojie and Tian, Yufeng and Ma, Xiaoyu and Bing, Zhenshan and Knoll, Alois},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems},
+  year={2024},
+  publisher={IEEE}
+}
+
+
+@article{strauss2024modeling,
+  title={Modeling Grid Cell Distortions with a Grid Cell Calibration Mechanism},
+  author={Strau{\ss}, Daniel and <b>Bing</b><sup>#</sup> and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
+  journal={<b>Cyborg and Bionic Systems</b>},
+  volume={5},
+  pages={0140},
+  year={2024},
+  publisher={AAAS},
+  preview={cbs2024.png},
+}
