--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -576,11 +576,21 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 
 @article{strauss2024modeling,
   title={Modeling Grid Cell Distortions with a Grid Cell Calibration Mechanism},
-  author={Strau{\ss}, Daniel and <b>Bing</b><sup>#</sup> and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
+  author={Strau{\ss}, Daniel and <b>Bing</b><sup>#</sup>, <b>Zhenshan</b> and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
   journal={<b>Cyborg and Bionic Systems</b>},
   volume={5},
   pages={0140},
   year={2024},
   publisher={AAAS},
   preview={cbs2024.png},
+}
+
+@article{zhou2024language,
+  abbr={RAL},
+  title={Language-conditioned imitation learning with base skill priors under unstructured data},
+  author={Zhou, Hongkuan and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Yao, Xiangtong and Su, Xiaojie and Yang, Chenguang and Huang, Kai and Knoll, Alois},
+  journal={<b>IEEE Robotics and Automation Letters</b>},
+  year={2024},
+  publisher={IEEE},
+  preview={zhou2024RAL.png},
 }
