--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -583,6 +583,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   year={2024},
   publisher={AAAS},
   preview={cbs2024.png},
+  selected={true}
 }
 
 @article{zhou2024language,
