--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -597,9 +597,9 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 }
 
 @article{Jia2024,
-  author = {Jia, Guanglu and Chen, Zhe and Zhang, Yulai and Bing, Zhenshan and Quan, Zhenzhen and Chen, Xuechao and Knoll, Alois and Huang, Qiang and Shi, Qing},
+  author = {Jia, Guanglu and Chen, Zhe and Zhang, Yulai and <b>Bing</b>, <b>Zhenshan</b> and Quan, Zhenzhen and Chen, Xuechao and Knoll, Alois and Huang, Qiang and Shi, Qing},
   title = {Modulating emotional states of rats through a rat-like robot with learned interaction patterns},
-  journal = {Nature Machine Intelligence},
+  journal = {<b>Nature Machine Intelligence</b>},
   year = {2024},
   volume = {},
   number = {},
