--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -608,6 +608,6 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   url = {https://doi.org/10.1038/s42256-024-00939-y},
   abstract = {Robots, integrated into biological systems as sociable partners, offer promising advancement in the mechanistic understanding of social behaviours. These biohybrid systems bring controllability to help elucidate the underlying biological intelligence previously inaccessible through traditional techniques. However, state-of-the-art interactive robots still struggle to convey multilevel, heterogeneous information within biological systems, making it challenging to mediate the complex interaction process effectively. Here we propose an autonomous, interactive rat-like robot that can engage with freely behaving rats by learning from the anatomical structure, dynamic motions and social interaction of rats. Imitation learning based on animal demonstration enables the robot with subtle templates of social behaviour, allowing it to capture the attention of rats and significantly arouse their interest. It also integrates visual perception, target tracking and behavioural decisions to substantially augment the interaction efficiency. We demonstrate that the robot can interact with rats for a continuous half-hour. Moreover, the robot can modulate the emotional states of rats through different interaction patterns during robot–rat social interaction. These results attest that the proposed interactive robot, with its long-term and repetitive interaction capabilities, overcomes the limitations of natural social interaction within biological systems. Such biohybrid systems capable of modulating the internal states of organisms may open the door to comprehending the ‘social’ interactions between humans and artificial intelligence.},
   issn = {2522-5839},
-  preview={nmi-bit.png},
+  preview={nmi-bit-12.png},
   selected={true}
 }
