--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,8 @@
 }
 
 @article{Meng2025,
-  author = {Meng, Yuan and Bing, Zhenshan and Yao, Xiangtong and Chen, Kejia and Huang, Kai and Gao, Yang and Sun, Fuchun and Knoll, Alois},
+  bibtex_show={true},
+  author = {Meng, Yuan and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Yao, Xiangtong and Chen, Kejia and Huang, Kai and Gao, Yang and Sun, Fuchun and Knoll, Alois},
   year = {2025},
   date = {2025-02-05},
   title = {Preserving and combining knowledge in robotic lifelong reinforcement learning},
@@ -30,7 +31,7 @@
   issn = {2522-5839},
   url = {https://doi.org/10.1038/s42256-025-00983-2},
   doi = {10.1038/s42256-025-00983-2},
-  preview={mni-legion.png},
+  preview={nmi-legion.png},
   selected={true}
 }
 
